--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/login?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 server.error.whitelabel.enabled=false
 server.port=9080
-spring.datasource.username=login
+spring.datasource.username=test
 spring.datasource.password=Shreyagujar1997
 #logging.level.root=WARN
 spring.jpa.open-in-view=false
