--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/login?useUnicode=true&useJDBCC
 server.error.whitelabel.enabled=false
 server.port=9080
 spring.datasource.username=root
-spring.datasource.password=MySQLshreyagujar1997
+spring.datasource.password=MySQLshreya@1997
 #logging.level.root=WARN
 spring.jpa.open-in-view=false
 spring.thymeleaf.cache=false
